--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: 6. 推送到vercel分支
         uses: peaceiris/actions-gh-pages@v3.9.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.TOKEN }}
           publish_branch: vercel
           publish_dir: ./dist
           user_name: 'github-actions[bot]'
